--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
     <link rel="stylesheet" href="css/main.css">
     <title>Sci-Bot</title>
 <body>
-    <div class="title" style="margin-top: 50px;">
+    <div class="title">
         <h1 class="header">Sci-Bot</h1>
         <h3>基于Onebot11协议的后端插件实现</h3>
+        <span>
         <a href="#" class="button">前往Github</a>
         <a href="#" class="button">了解插件规范</a>
         <a href="#" class="button">插件市场</a>
         <a href="#" class="button">关于我们</a>
+        </span>
     </div>
+    <h1 class="abstract">特性 Features</h1>
     <div class="introduction" style="margin-top: 50px;">
         <h2 class="intro">基于Kotlin的插件系统</h1>
         <p>易于理解，快速上手，逻辑简便</p>
