--- a/index.html
+++ b/index.html
@@ -3,31 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/classic.css">
     <title>Sci-Bot</title>
 <body>
     <div class="title">
         <h1 class="header">Sci-Bot</h1>
         <h3>基于Onebot11协议的后端插件实现</h3>
         <span>
-        <a href="#" class="button">前往Github</a>
+        <a href="https://github.com/glowingstone124/SciBot" class="button">前往Github</a>
         <a href="#" class="button">了解插件规范</a>
         <a href="#" class="button">插件市场</a>
         <a href="#" class="button">关于我们</a>
         </span>
     </div>
-    <h1 class="abstract">特性 Features</h1>
-    <div class="introduction" style="margin-top: 50px;">
-        <h2 class="intro">基于Kotlin的插件系统</h1>
-        <p>易于理解，快速上手，逻辑简便</p>
-    </div>
-    <div class="introduction" style="margin-top: 50px;">
-        <h2 class="intro">多样化事件</h2>
-        <p>完美兼容Onebot11规范</p>
-    </div>
-    <div class="introduction" style="margin-top: 50px;">
-        <h2 class="intro">社区驱动的插件市场</h2>
-        <p>找不到合适自己的插件?不妨来插件市场看看</p>
+    <div class="main">
+        <h1 class="abstract">特性 Features</h1>
+        <div class="introduction" style="margin-top: 50px;">
+            <h2 class="intro">基于Kotlin的插件系统</h1>
+            <p>易于理解，快速上手，逻辑简便</p>
+        </div>
+        <div class="introduction" style="margin-top: 50px;">
+           <h2 class="intro">多样化事件</h2>
+           <p>完美兼容Onebot11规范</p>
+        </div>
+        <div class="introduction" style="margin-top: 50px;">
+            <h2 class="intro">社区驱动的插件市场</h2>
+            <p>找不到合适自己的插件?不妨来插件市场看看</p>
+        </div>
     </div>
     <script src="js/themeswitch.js"></script>
 </body>
