--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="title">
         <h1 class="header">Sci-Bot</h1>
         <h3>基于Onebot11协议的后端插件实现</h3>
-        <span>
+        <span class="nav">
         <a href="https://github.com/glowingstone124/SciBot" class="button">前往Github</a>
         <a href="#" class="button">了解插件规范</a>
         <a href="#" class="button">插件市场</a>
@@ -21,6 +21,9 @@
         <div class="introduction" style="margin-top: 50px;">
             <h2 class="intro">基于Kotlin的插件系统</h1>
             <p>易于理解，快速上手，逻辑简便</p>
+            <p>独有sender等库免去二次包装</p>
+            <p>事件驱动handler，快速定义事件，无需繁杂注册</p>
+            <p>插件Playground让你无需对接Onebot即可直接测试逻辑</p>
         </div>
         <div class="introduction" style="margin-top: 50px;">
            <h2 class="intro">多样化事件</h2>
