--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
     </div>
     <div class="main">
         <h1 class="abstract">特性 Features</h1>
-        <div class="introduction" style="margin-top: 50px;">
+        <div class="introduction" >
             <h2 class="intro">基于Kotlin的插件系统</h1>
             <p>易于理解，快速上手，逻辑简便</p>
             <p>独有sender等库免去二次包装</p>
             <p>事件驱动handler，快速定义事件，无需繁杂注册</p>
             <p>插件Playground让你无需对接Onebot即可直接测试逻辑</p>
         </div>
-        <div class="introduction" style="margin-top: 50px;">
+        <div class="introduction" >
            <h2 class="intro">多样化事件</h2>
            <p>完美兼容Onebot11规范</p>
         </div>
-        <div class="introduction" style="margin-top: 50px;">
+        <div class="introduction">
             <h2 class="intro">社区驱动的插件市场</h2>
             <p>找不到合适自己的插件?不妨来插件市场看看</p>
         </div>
