--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h3>基于Onebot11协议的后端插件实现</h3>
         <span class="nav">
         <a href="https://github.com/glowingstone124/SciBot" class="button">前往Github</a>
-        <a href="#" class="button">了解插件规范</a>
+        <a href="docs" class="button">了解插件规范</a>
         <a href="#" class="button">插件市场</a>
         <a href="#" class="button">关于我们</a>
         </span>
