--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <h1 class="header">Sci-Bot</h1>
         <h3>基于Onebot11协议的后端插件实现</h3>
         <span class="nav">
-        <a href="https://github.com/QuantumOriginal/SciBot" class="button">前往Github</a>
+        <a href="https://github.com/QuantumOriginal/SciBot" class="button">前往GitHub</a>
         <a href="docs" class="button">了解插件规范</a>
-        <a href="#" class="button">插件市场</a>
+        <a href="plugins.html" class="button">插件市场</a>
         <a href="#" class="button">关于我们</a>
         </span>
     </div>
